complete, with bugs on small screens

--- a/src/sass/abstracts/variables.scss
+++ b/src/sass/abstracts/variables.scss
@@ -2,9 +2,11 @@
 
         $yellow: #E5CB8A;
         $anthracite: #1C1A19;
-        $teal: #99E2D0;
-        $gray: #ededed;
-        $darkgray: #5e5e5e;
+        $mainboard: #201E1D;
+        $mainboardtransparent: #201e1db9;
+        $border: #4c4431;
+        $brown: #2D241F;
+        $browntransparent: #2d241fb2;
         $gray1: #f6f6f6;
         $gray2: #eaeaea;
         $gray3: #353535;
