--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -78,3 +78,65 @@ header{
         bottom: 0;
     }
 }
+main{
+    position: relative;
+    padding: 6.5vw 0;
+    display: flex;
+    justify-content: center;
+}
+
+.mandalaBox{
+    width: 20%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -15%);
+    opacity: 0.2;
+    z-index: -1;
+}
+
+.mainBoard{
+    width: min(96%, 1500px);
+    min-height: 100vh;
+    background-color: $mainboard;
+    padding: max(5px, 5vw);
+    border: 1px solid $border;
+    border-radius: 30px;
+    position: relative;
+}
+.mainSectionIntro{
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+}
+
+.fleurBox{
+    margin-right: max(20px, 5vw);
+    border-radius: 50%;
+    width: 600px;
+}
+.fleurBox img{
+    width: 100%;
+    height: 100%;
+}
+
+.introText{
+    color: white;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: max(20px, 1.5vw);
+    font-weight: 100;
+}
+.address{
+    width: 50%;
+    color: $yellow;
+    font-size: 20px;
+    font-weight: 100;
+}
+.mandanaBox{
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    z-index: -1;
+}
